# lingmo-services

./: CMakeLists.txt
.github/workflows/: build.yml  package.yml
chotkeys/: CMakeLists.txt
clipboard/: CMakeLists.txt
cpufreq/: CMakeLists.txt  com.lingmo.cpufreq.pkexec.policy.in
cupdatecursor/: CMakeLists.txt
debian/: changelog  control  copyright
gmenuproxy/: CMakeLists.txt  menuproxy.cpp
lingmo.Pkg/: baseInfo  version
notificationd/: CMakeLists.txt  application.cpp  com.lingmo.Notification.xml
polkit-agent/: CMakeLists.txt
powerman/: CMakeLists.txt  application.cpp  com.lingmo.PowerManager.xml  dimdisplayaction.cpp
powerman/cpu/: com.lingmo.CPUManagement.xml
rpm/: lingmo-services.spec
screen-brightness/: CMakeLists.txt  com.lingmo.brightness.pkexec.policy.in
sddm-helper/: CMakeLists.txt  com.lingmo.sddm.helper.pkexec.policy.in
session/: CMakeLists.txt  application.cpp  com.lingmo.Session.xml
settings-daemon/: CMakeLists.txt  application.cpp
settings-daemon/battery/: com.lingmo.PrimaryBattery.xml
settings-daemon/brightness/: com.lingmo.Brightness.xml
settings-daemon/dock/: com.lingmo.Dock.xml
settings-daemon/language/: com.lingmo.Language.xml
settings-daemon/mouse/: com.lingmo.Mouse.xml
settings-daemon/theme/: com.lingmo.Theme.xml
settings-daemon/touchpad/: com.lingmo.Touchpad.xml
shutdown-ui/: CMakeLists.txt  actions.cpp  main.cpp
xembed-sni-proxy/: CMakeLists.txt  debug.cpp
